# rclone-gui

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
docs/: ADR-002-QThread-JSON-Explorer.md  PRD.md
docs/specs/: 00-roadmap-specs.md  01-gerenciamento-remotos-spec.md  02-explorador-arquivos-spec.md  03-jobs-sync-spec.md  04-montagem-vfs-spec.md  05-transferencias-copy-move-spec.md  06-verificacao-integridade-spec.md  07-daemon-tray-autostart-spec.md  08-sync-folders-spec.md  09-packaging-spec.md
packaging/: rclone-gui-autostart.desktop  rclone-gui.desktop
rclone_gui/: __main__.py
rclone_gui/daemon/: daemon_app.py  notification.py  sync_folder_manager.py  sync_folder_poller.py  sync_folder_watcher.py  tray_manager.py
rclone_gui/db/: database.py
rclone_gui/gui/: main_window.py
rclone_gui/gui/common/: rclone_process.py  styles.py
rclone_gui/gui/explorer/: file_panel.py  two_panel.py
rclone_gui/gui/jobs/: job_editor.py  (+1 more)
rclone_gui/models/: job.py  mount.py  remote.py  sync_folder.py
rclone_gui/resources/: backends.json
rclone_gui/services/: job_service.py  rclone_service.py  sync_folder_service.py
scripts/: build-deb.sh  postinst.sh  prerm.sh
tests/: conftest.py
tests/contract/: test_rclone_contracts.py
tests/e2e/: test_e2e.py  test_functional.py
tests/integration/: test_integration.py
tests/regression/: test_regression.py
tests/unit/: test_models.py  test_sync_folder.py  test_sync_folder_manager.py  test_sync_folder_poller.py  test_sync_folder_service.py  test_sync_folder_watcher.py
tests/validation/: test_comprehensive.py
(+8 files in other folders)
